frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-frontend
  template:
    metadata:
      labels:
        app: project-frontend
    spec:
      containers:
      - name: frontend
        image: my-frontend:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
