backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-backend-service
spec:
  type: ClusterIP
  selector:
    app: project-backend
  ports:
  - port: 80
    targetPort: 3000
